Fix text contrast

--- a/components/Thumbnail/Thumbnail.module.scss
+++ b/components/Thumbnail/Thumbnail.module.scss
@@ -23,10 +23,15 @@
   border-radius: 20px;
   @include h2;
   margin: 0;
-  padding-bottom: 2rem;
+  padding-bottom: 1.2rem;
   text-transform: capitalize;
-  text-shadow: 0 0 20px $black;
+  color: $white;
   transition: 0.3s ease-in-out;
+  background: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 0.7) 0%,
+    rgba(255, 255, 255, 0) 30%
+  );
 
   &:hover {
     background-color: rgba(0, 0, 0, 0.3);
